pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dependent-envars-demo
spec:
  containers:
    - name: dependent-envars-demo
      args:
        - while true; do echo -en '\n'; printf SERVICE_IP=$SERVICE_IP'\n'; sleep 30; done;
      command:
        - sh
        - -c
      image: busybox:1.28
