service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aplicacion
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: aplicacion
