route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aplicacion
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: 'roundrobin'
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: aplicacion
    weight: 100
  port:
    targetPort: https
